fix on mobile

--- a/src/components/docPage/type.scss
+++ b/src/components/docPage/type.scss
@@ -41,9 +41,17 @@
 
     scroll-margin-top: calc(var(--header-height) + 1.5rem);
   }
+
   .onboarding-options ~ :is(h1, h2, h3, h4, h5, h6) {
     // the magic 2rem to account for the onboarding options
-    scroll-margin-top: calc(var(--header-height) + 1.5rem + 2rem);
+    --scroll-margin-top: calc(var(--header-height) + 1.5rem + 2rem);
+    scroll-margin-top: var(--scroll-margin-top);
+  }
+
+  @media (max-width: 768px) {
+    .onboarding-options ~ :is(h1, h2, h3, h4, h5, h6) {
+      --scroll-margin-top: calc(var(--header-height) + 1.5rem + 5rem);
+    }
   }
 
   h1 {
